# admin-cli

./: Cargo.toml  README.md
src/: deploy.rs  geonames.rs  main.rs  metadata.rs
