[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0.18", features = ["derive"] }
redis = "0.22.1"
csv = "1.1.6"
zip = "0.5"
log = "0.4.17"
chrono = { version = "0.4", features = ["serde"] }
elasticsearch = { version = "8.5.0-alpha.1", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.21.2", features = ["full"] }